--- a/index.html
+++ b/index.html
@@ -1,11 +1,59 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Artistas Musicales Favoritos</title>
+    <style>
+        .artist {
+            border: 1px solid #ddd;
+            margin: 20px;
+            padding: 20px;
+            text-align: center;
+        }
+        .artist img {
+            max-width: 100%;
+            height: auto;
+        }
+    </style>
 </head>
 <body>
-    <div>12345670o</div>
+    <h1>Mis 5 Artistas Musicales Favoritos</h1>
+
+    <div class="artist">
+        <h2>Mika</h2>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/6/6e/Mika_2016.jpg" alt="Mika">
+        <p>Michael Holbrook Penniman Jr., conocido profesionalmente como Mika, es un cantante y compositor británico-libanés. Su álbum debut, "Life in Cartoon Motion", fue un éxito mundial y le valió un Brit Award.</p>
+    </div>
+
+    <div class="artist">
+        <h2>Jason Derulo</h2>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/4/4d/Jason_Derulo_2018.jpg" alt="Jason Derulo">
+        <p>Jason Joel Desrouleaux, conocido como Jason Derulo, es un cantante, compositor y bailarín estadounidense. Ha vendido más de 30 millones de sencillos y es conocido por éxitos como "Whatcha Say" y "Talk Dirty".</p>
+    </div>
+
+    <div class="artist">
+        <h2>Maluma</h2>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/3/3e/Maluma_2019.jpg" alt="Maluma">
+        <p>Juan Luis Londoño Arias, conocido como Maluma, es un cantante colombiano de reguetón y música urbana. Su álbum "Pretty Boy, Dirty Boy" lo catapultó a la fama internacional.</p>
+    </div>
+
+    <div class="artist">
+        <h2>J Balvin</h2>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/9/9a/J_Balvin_2019.jpg" alt="J Balvin">
+        <p>José Álvaro Osorio Balvín, conocido como J Balvin, es un cantante colombiano de reguetón. Es uno de los artistas latinos más vendidos y ha colaborado con artistas como Beyoncé y Cardi B.</p>
+    </div>
+
+    <div class="artist">
+        <h2>Eladio Carrión</h2>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/8/8e/Eladio_Carrión_2019.jpg" alt="Eladio Carrión">
+        <p>Eladio Carrión Morales es un rapero y compositor puertorriqueño. Es conocido por su estilo en el trap latino y ha colaborado con varios artistas de renombre en la música urbana.</p>
+    </div>
+
+    <div class="artist">
+        <h2>Ozuna</h2>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/1/1e/Ozuna_2019.jpg" alt="Ozuna">
+        <p>Juan Carlos Ozuna Rosado, conocido como Ozuna, es un cantante puertorriqueño de reguetón y trap. Ha lanzado varios álbumes exitosos y es conocido por su voz aguda y sus letras positivas.</p>
+    </div>
 </body>
 </html>
